# marlax

./: .gitignore  AGENTS.md  README.md  STYLE.md  environment.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: Makefile
docs/source/: api.rst  conf.py  gallery.rst  getting_started.rst  index.rst
docs/source/_static/css/: site.css
docs/source/_static/js/: cooperative_grid.js
docs/source/algorithms/: index.rst  q_learning.rst
docs/source/design/: architecture.rst  gpu.rst  index.rst  package.rst  q_learning.rst  storage.rst
docs/source/environments/: cooperative_grid.rst  index.rst
experiments/: coop_grid_q_learning.py
experiments/coop_grid_q_learning/: config.py  evaluate.py  export.py  plot.py  run.py  train.py
site/: index.html
site/css/: gallery.css
site/data/: coop_grid_q_learning.json
site/js/: gallery.js
src/marlax/: __init__.py
src/marlax/agents/: __init__.py  q_learning.py
src/marlax/envs/: __init__.py  coop_grid.py
stores/coop_grid_q_learning/latest/: metadata.json  metrics.json  q_values.npz
tests/: test_coop_grid.py  test_gallery_export.py  test_q_learning.py
visualize/: cooperative_grid.py
