[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marlax"
version = "0.0.0"
description = "JAX-first cooperative multi-agent reinforcement learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
gpu = [
    "jax[cuda13]>=0.10",
]
storage = [
    "zarr>=3.1",
]
viz = [
    "matplotlib>=3.10",
    "pillow>=11",
    "seaborn>=0.13",
    "tqdm>=4.67",
]
all = [
    "jax[cuda13]>=0.10",
    "matplotlib>=3.10",
    "pillow>=11",
    "pytest>=8",
    "seaborn>=0.13",
    "tqdm>=4.67",
    "zarr>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
